--- a/onlineshop/src/main/resources/templates/products.html
+++ b/onlineshop/src/main/resources/templates/products.html
@@ -26,39 +26,101 @@
             <p th:text="${failureMessage}"></p>
         </div>
 
-        <div class="products-list">
-            <a class="product-card"
-               th:each="product : ${products.getProducts()}"
-               th:href="@{/products/product/{id}(id=${product.getId()})}">
-                <div class="new-badge" th:if="${product.getCategories().contains('Ново')}">НОВО</div>
-                <form th:action="@{/users/favourites/add-favourite/{id}(id=${product.getId()})}"
-                      th:method="POST">
-                    <input type="hidden" name="productId" value="${product.id}" />
-                    <button type="submit" class="wishlist"><i class="fa-regular fa-heart"></i></button>
-                </form>
-                <div class="product-image">
-                    <img th:src="@{${product.imageUrls[0]}}" th:alt="${product.name}">
-                </div>
-                <div class="product-title" th:text="${product.getName()}">Nike Flex Experience RN 12</div>
-                <div class="product-type">
-                    <span th:if="${product.categories.contains('Мъжки обувки')}">Мъжки обувки</span>
-                    <span th:if="${product.categories.contains('Дамски обувки')}">Дамски обувки</span>
-                    <span th:if="${product.categories.contains('Детски обувки')}">Детски обувки</span>
-                </div>
-                <div class="price">
-                    <span class="current" th:text="${product.getPrice()} + ' лв.'">129.99 лв.</span>
-                </div>
-                <div class="free-shipping" th:if="${product.getPrice() > 100}">Безплатна доставка</div>
-                <div class="color">
-                    <span th:text="'Цвят: ' + ${product.getColor()}"></span>
-                </div>
-                <div class="sizes">
-                    <div class="sizes-title">Налични размери:</div>
-                    <div class="sizes">
-                        <span th:each="size : ${product.getSizes()}" th:text="${size.size}"></span>
+        <div class="main-content">
+            <form class="filter-form"
+                  th:action="@{/products/all}"
+                  th:method="GET">
+                <div class="size-filter">
+                    <h3>Избери размер</h3>
+
+                    <div class="size-buttons">
+                        <div th:each="size : ${shoeSizes}" class="size-option">
+                            <input type="checkbox" name="sizes"
+                                   th:value="${size.size}"
+                                   th:id="${'size_' + size}"
+                                   th:checked="${param.sizes != null and #lists.contains(param.sizes, size.size.toString())}">
+                            <label th:for="${'size_' + size}" th:text="${size.size}">40</label>
+                        </div>
                     </div>
                 </div>
-            </a>
+
+                <div class="brand-filter">
+                    <h3>Избери марка</h3>
+
+                    <div class="brand-buttons">
+                        <div th:each="brand : ${brands}" class="brand-option">
+                            <input type="checkbox" name="brands"
+                                   th:value="${brand.brandName}"
+                                   th:id="${'brand_' + brand.brandName}"
+                                   th:checked="${param.brands != null and #lists.contains(param.brands, brand.brandName.toString())}">
+                            <label th:for="${'brand_' + brand.brandName}">
+                                <img th:src="@{${brand.brandUrl}}" th:alt="${brand.brandName}" />
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="price-filter">
+                    <h3>Избери цена</h3>
+
+                    <div>
+                        <p>от<input type="number" name="minPrice" th:value="${param.minPrice}">
+                            до <input type="number" name="maxPrice" th:value="${param.maxPrice}">лв.</p>
+                    </div>
+                </div>
+
+                <div class="color-filter">
+                    <h3>Избери цвят</h3>
+
+                    <div class="color-buttons">
+                        <div th:each="color : ${colors}" class="color-option">
+                            <input type="checkbox" name="colors"
+                                   th:value="${color.description}"
+                                   th:id="${'color_' + color.description}"
+                                   th:checked="${param.colors != null and #lists.contains(param.colors, color.description)}">
+                            <label th:for="${'color_' + color.description}" th:text="${color.description}">Черен</label>
+                        </div>
+                    </div>
+                </div>
+
+                <button type="submit">Филтрирай</button>
+                <a th:href="@{/products/all}" class="clear-filters-btn">Изчисти филтрите</a>
+            </form>
+
+            <div class="products-list">
+                <div class="product-card" th:each="product : ${products.getProducts()}">
+                    <a th:href="@{/products/product/{id}(id=${product.getId()})}">
+                        <div class="new-badge" th:if="${product.getCategories().contains('Ново')}">НОВО</div>
+                        <form th:action="@{/users/favourites/add-favourite/{id}(id=${product.getId()})}"
+                              th:method="POST">
+                            <input type="hidden" name="productId" value="${product.id}" />
+                            <button type="submit" class="wishlist"><i class="fa-regular fa-heart"></i></button>
+                        </form>
+                        <div class="product-image">
+                            <img th:src="@{${product.imageUrls[0]}}" th:alt="${product.name}">
+                        </div>
+                        <div class="product-title" th:text="${product.getName()}">Nike Flex Experience RN 12</div>
+                        <div class="product-type">
+                            <span th:if="${product.categories.contains('Мъжки обувки')}">Мъжки обувки</span>
+                            <span th:if="${product.categories.contains('Дамски обувки')}">Дамски обувки</span>
+                            <span th:if="${product.categories.contains('Детски обувки')}">Детски обувки</span>
+                        </div>
+                        <div class="price">
+                            <span class="current" th:text="${product.getPrice()} + ' лв.'">129.99 лв.</span>
+                        </div>
+                        <div class="free-shipping" th:if="${product.getPrice() > 100}">Безплатна доставка</div>
+                        <div class="color">
+                            <span th:text="'Цвят: ' + ${product.getColor()}"></span>
+                        </div>
+                        <div class="sizes">
+                            <div class="sizes-title">Налични размери:</div>
+                            <div class="sizes">
+                                <span th:each="size : ${product.getSizes()}" th:text="${size.size}"></span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
     </main>
 
