--- a/onlineshop/src/main/resources/templates/products.html
+++ b/onlineshop/src/main/resources/templates/products.html
@@ -114,7 +114,7 @@
                         </div>
                         <div class="sizes">
                             <div class="sizes-title">Налични размери:</div>
-                            <div class="sizes">
+                            <div class="sizes-table">
                                 <span th:each="size : ${product.getSizes()}" th:text="${size.size}"></span>
                             </div>
                         </div>
