--- a/onlineshop/src/main/resources/static/css/product-details-styles.css
+++ b/onlineshop/src/main/resources/static/css/product-details-styles.css
@@ -64,7 +64,6 @@ main .content-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 1em;
 }
 
 .product-header .product-type {
@@ -72,11 +71,16 @@ main .content-container {
     font-size: 14px;
 }
 
-.product-header .brand-image img {
-    width: 90px;
-    height: 90px;
+.brand-image {
     aspect-ratio: 1 / 1;
-    object-fit: cover;
+    position: relative;
+    overflow: hidden;
+}
+
+.brand-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .price {
