--- a/onlineshop/src/main/resources/templates/product-details.html
+++ b/onlineshop/src/main/resources/templates/product-details.html
@@ -25,7 +25,7 @@
 
         <div class="main-content">
             <div class="image-container">
-                <div class="new-badge" th:if="${product.getCategories().contains('Ново')}">НОВО</div>
+                <div class="new-badge" th:if="${product.isNew()}">НОВО</div>
                 <form th:action="@{/users/favourites/add-favourite/{id}(id=${product.getId()})}"
                       th:method="POST">
                     <input type="hidden" name="productId" value="${product.getId()}" />
@@ -40,9 +40,7 @@
                         <h2 th:text="${product.getName()}"></h2>
 
                         <div class="product-type">
-                            <span th:if="${product.categories.contains('Мъжки обувки')}">Мъжки обувки</span>
-                            <span th:if="${product.categories.contains('Дамски обувки')}">Дамски обувки</span>
-                            <span th:if="${product.categories.contains('Детски обувки')}">Детски обувки</span>
+                            <span th:text="${product.getCategory()}">Мъжки обувки</span>
                         </div>
                     </div>
 
