Add old price column to products table and change links for pages

--- a/onlineshop/src/main/resources/templates/fragments/commons.html
+++ b/onlineshop/src/main/resources/templates/fragments/commons.html
@@ -71,8 +71,8 @@
                 <li><a th:href="@{/products/category/women}">Дамски</a></li>
                 <li><a th:href="@{/products/category/men}">Мъжки</a></li>
                 <li><a th:href="@{/products/category/children}">Детски</a></li>
-                <li><a th:href="@{/products/category/sale}">Разпродажба<i class="fa-solid fa-circle"></i></a></li>
-                <li><a th:href="@{/products/category/new}">Ново<i class="fa-solid fa-circle"></i></a></li>
+                <li><a th:href="@{/products/on-sale}">Разпродажба<i class="fa-solid fa-circle"></i></a></li>
+                <li><a th:href="@{/products/new}">Ново<i class="fa-solid fa-circle"></i></a></li>
             </ul>
         </nav>
 
@@ -92,8 +92,8 @@
                 <li><a th:href="@{/products/category/women}">Дамски</a></li>
                 <li><a th:href="@{/products/category/men}">Мъжки</a></li>
                 <li><a th:href="@{/products/category/children}">Детски</a></li>
-                <li><a th:href="@{/products/category/sale}">Разпродажба</a></li>
-                <li><a th:href="@{/products/category/new}">Ново</a></li>
+                <li><a th:href="@{/products/on-sale}">Разпродажба</a></li>
+                <li><a th:href="@{/products/new}">Ново</a></li>
             </ul>
 
             <ul class="customer-service">
