--- a/onlineshop/src/main/resources/templates/index.html
+++ b/onlineshop/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
             </section>
 
             <section class="new-models">
-                <a th:href="@{/products/category/new}"><img src="/images/index/new-models.jpg" alt="Нови модели"></a>
+                <a th:href="@{/products/new}"><img src="/images/index/new-models.jpg" alt="Нови модели"></a>
             </section>
 
             <section class="choose-your-size">
