--- a/onlineshop/src/main/resources/static/css/product-details-styles.css
+++ b/onlineshop/src/main/resources/static/css/product-details-styles.css
@@ -88,14 +88,14 @@ main .content-container {
 }
 
 .price .current {
-    color: red;
+    color: #C00;
     font-weight: bold;
 }
 
 .price .old {
     text-decoration: line-through;
     color: #999;
-    margin-left: 10px;
+    margin-left: 0.3em;
 }
 
 .free-shipping {
