--- a/onlineshop/src/main/resources/templates/profile.html
+++ b/onlineshop/src/main/resources/templates/profile.html
@@ -34,7 +34,7 @@
             <a class="admin-menu-link" th:href="@{/promo-codes/add-promo-code}">Добави промо код</a>
             <a class="admin-menu-link" th:href="@{/orders/all}">Всички поръчки</a>
             <a class="admin-menu-link" th:href="@{/return-or-replacement/requests}">Заявки замяна/връщане</a>
-            <a class="admin-menu-link" th:href="@{/products/add-discount}">Разпродажба</a>
+            <a class="admin-menu-link" th:href="@{/discounts/add-discount}">Разпродажба</a>
         </div>
 
         <div class="main-profile-info">
