--- a/onlineshop/src/main/resources/templates/add-address.html
+++ b/onlineshop/src/main/resources/templates/add-address.html
@@ -33,7 +33,7 @@
                 </select>
                 <small th:if="${#fields.hasErrors('region')}"
                        th:errors="*{region}"
-                       class="text-danger">Dish name error message</small>
+                       class="text-danger"></small>
             </div>
 
             <div class="field">
@@ -41,7 +41,7 @@
                 <input type="text" th:field="*{town}" name="town" id="town">
                 <small th:if="${#fields.hasErrors('town')}"
                        th:errors="*{town}"
-                       class="text-danger">Dish name error message</small>
+                       class="text-danger"></small>
             </div>
 
             <div class="field">
@@ -49,7 +49,7 @@
                 <input type="text" th:field="*{postalCode}" name="postalCode" id="postalCode">
                 <small th:if="${#fields.hasErrors('postalCode')}"
                        th:errors="*{postalCode}"
-                       class="text-danger">Dish name error message</small>
+                       class="text-danger"></small>
             </div>
 
             <div class="field">
@@ -57,7 +57,7 @@
                 <input type="text" th:field="*{street}" name="street" id="street">
                 <small th:if="${#fields.hasErrors('street')}"
                        th:errors="*{street}"
-                       class="text-danger">Dish name error message</small>
+                       class="text-danger"></small>
             </div>
 
             <div class="radio-buttons-field">
