Add scheduler to check for active discounts and apply them

--- a/onlineshop/src/main/resources/static/css/favourites-styles.css
+++ b/onlineshop/src/main/resources/static/css/favourites-styles.css
@@ -36,16 +36,31 @@ main .products-list {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.new-badge {
+.badge-container {
     position: absolute;
     top: 15px;
     left: 10px;
-    background: green;
+    display: flex;
+    gap: 0.4em;
+    flex-wrap: nowrap;
+}
+
+.new-badge,
+.sale-badge {
+    position: absolute;
+    top: 15px;
+    left: 10px;
+    background-color: green;
     color: #fff;
     font-size: 12px;
     padding: 0 0.5em;
     border-radius: 1em;
     font-weight: bold;
+    white-space: nowrap;
+}
+
+.sale-badge {
+    background-color: #C00;
 }
 
 .wishlist {
@@ -100,7 +115,7 @@ main .products-list {
 .price .old {
     text-decoration: line-through;
     color: #999;
-    margin-left: 10px;
+    margin-left: 0.3em;
 }
 
 .free-shipping {
