--- a/onlineshop/src/main/resources/templates/products.html
+++ b/onlineshop/src/main/resources/templates/products.html
@@ -90,7 +90,11 @@
             <div class="products-list">
                 <div class="product-card" th:each="product : ${products.getProducts()}">
                     <a th:href="@{/products/product/{id}(id=${product.getId()})}">
-                        <div class="new-badge" th:if="${product.isNew()}">НОВО</div>
+                        <div class="badge-container">
+                            <div class="new-badge" th:if="${product.isNew()}">НОВО</div>
+                            <div class="sale-badge" th:if="${product.isOnSale()}"
+                                 th:text="'-' + ${product.getSalePercent()} + '%'">-12%</div>
+                        </div>
                         <form th:action="@{/users/favourites/add-favourite/{id}(id=${product.getId()})}"
                               th:method="POST">
                             <input type="hidden" name="productId" value="${product.id}" />
