--- a/onlineshop/src/main/resources/static/css/products-styles.css
+++ b/onlineshop/src/main/resources/static/css/products-styles.css
@@ -258,3 +258,33 @@ main .products-list {
     font-size: 14px;
     margin-bottom: 5px;
 }
+
+.pagination ul,
+.pagination ul li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+}
+
+.pagination .pageNumber,
+.pagination .active {
+    border: 1px solid #ccc;
+    padding: 0 0.8em;
+    border-radius: 50%;
+    aspect-ratio: 1 / 1;
+}
+
+.pagination .active {
+    background-color: #000;
+    color: #fff;
+    border: none;
+}
+
+.pagination .hasPrevious,
+.pagination .hasNext {
+    background-color: #000;
+    color: #fff;
+    border-radius: 1.5em;
+    padding: 0 0.8em;
+}
